Add the latest python version to the environment

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 name: ThinkStats2
 
 dependencies:
-  - python=3.7
+  - python
   - jupyter
   - numpy
   - matplotlib
@@ -12,7 +12,4 @@ dependencies:
   - scikit-learn
   - pip
   - pip:
-    - .
-
-
-
+      - .
